--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 .corner {
@@ -15,6 +16,7 @@
     margin-left: 72vw;
     margin-top: -2vw;
     display: block;
+    
 }
 
 
@@ -32,6 +34,7 @@
 body {
     background-color: #F15223;
     width: 430px;
+    height: 932px;
     display: flex;
     flex-direction: column;
 
@@ -58,7 +61,7 @@ body {
 
 #minutesInput {
     width: 100px;
-    height: 33px;
+    height: 40px;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     border: black 1px solid;
@@ -73,25 +76,26 @@ input[type="text"]::placeholder {
   }
 
 #startBtn {
-    width: 48px;
-    height: 33px;
+    width: 50px;
+    height: 40px;
     border: black 1px solid;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    font-family: sans-serif;
 }
 
 .Plans {
     border: white solid 2px ;
     border-radius: 10px;
     background-color: white;
-    height: 600px;
+    height: 550px;
     width: 370px;
 
     
 }
 
 #energy {
-    margin-top: 20px;
+    margin-top: 26px;
     margin-left: 20px;
     float: left;
 }
@@ -106,6 +110,23 @@ input[type="text"]::placeholder {
 .Routine {
     display: flex;
     flex-direction: column;
+}
+
+#daily {
+    font-size: 16px;
+    font-weight: lighter;
+    font-family: sans-serif;
+}
+
+#weight {
+    font-size: 20px;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+#workout {
+    margin-top: 2px;
+    font-weight: lighter;
 }
 
 #forward {
@@ -132,6 +153,16 @@ input[type="text"]::placeholder {
     
 }
 
+#next {
+    color: #7F7F7F;
+    font-size: 13px;
+    margin-bottom: 4px;
+}
+
+#lower {
+    font-weight: bold;
+}
+
 .under {
     display: flex;
     flex-direction: column;
@@ -150,7 +181,7 @@ input[type="text"]::placeholder {
 }
 
 .recentPlan {
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 #Recent {
@@ -161,7 +192,30 @@ input[type="text"]::placeholder {
 .dayy {
 display: flex;
 margin-top: 20px;
-mar
 justify-content: space-around;
 }
 
+.time {
+    display: flex;
+    justify-content: space-around;
+    font-weight: lighter;
+    font-size: 16px;
+    color: #7F7F7F;
+}
+
+#viewall {
+    display: flex;
+    justify-content: end;
+    margin-right: 15px;
+    height: 75px;
+    align-items: end;
+}
+
+footer {
+    background-color: white;
+    margin-top: 50px;
+    width: 100%;
+    height: 130px;
+    display: flex;
+    justify-content: center;
+}
