--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 .date {
     width: fit-content;
     margin-top: -50px;
-    font-size: 23px;
+    font-size: 26px;
     font-family: sans-serif;
 }
 
@@ -113,7 +113,7 @@ input[type="text"]::placeholder {
 }
 
 #daily {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: lighter;
     font-family: sans-serif;
 }
@@ -145,6 +145,7 @@ input[type="text"]::placeholder {
     background-color: #DCCCC8;
     margin-left: -60px;
     margin-right: 25px;
+    margin-top: 20px;
     border-radius: 20px;
     height: 56px;
     display: flex;
@@ -177,11 +178,14 @@ input[type="text"]::placeholder {
 }
 
 #New {
+    margin-top: 2px;
     margin-right: 5px;
+    text-decoration: underline;
+    text-underline-offset: 7px;
 }
 
 .recentPlan {
-    margin-top: 40px;
+    margin-top: 50px;
 }
 
 #Recent {
@@ -207,7 +211,7 @@ justify-content: space-around;
     display: flex;
     justify-content: end;
     margin-right: 15px;
-    height: 75px;
+    height: 90px;
     align-items: end;
 }
 
@@ -215,7 +219,7 @@ footer {
     background-color: white;
     margin-top: 50px;
     width: 100%;
-    height: 130px;
+    height: 120px;
     display: flex;
     justify-content: center;
 }
