--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,8 @@
 .corner {
     display: flex;
     justify-content: flex-end;
-    margin-left: 72vw;
+
     margin-top: -2vw;
-    display: block;
     
 }
 
@@ -41,6 +40,13 @@ body {
     align-items: center; 
     
 }
+
+.lines {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
 
 .date {
     width: fit-content;
@@ -88,8 +94,8 @@ input[type="text"]::placeholder {
     border: white solid 2px ;
     border-radius: 10px;
     background-color: white;
-    height: 550px;
-    width: 370px;
+    height: 600px;
+    width: 90vw;
 
     
 }
@@ -240,6 +246,7 @@ footer {
     background-color: white;
     margin-top: 50px;
     width: 100%;
+    max-width: 100%;
     height: 120px;
     display: flex;
     justify-content: center;
@@ -257,9 +264,8 @@ footer {
   height: 90vh;
   background-color: white;
   padding: 20px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.2);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   transition: bottom 0.4s ease-in-out;
   z-index: 9999;
   display: flex;
@@ -289,7 +295,7 @@ footer {
   padding: 10px;
   margin: 8px 0;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 6px;
   font-size: 16px;
 }
 
