--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,6 @@
 .corner {
     display: flex;
     justify-content: flex-end;
-
-    margin-top: -2vw;
     
 }
 
@@ -32,8 +30,8 @@
 
 body {
     background-color: #F15223;
-    width: 430px;
-    height: 932px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 
@@ -42,7 +40,7 @@ body {
 }
 
 .lines {
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: flex-end;
 }
@@ -91,10 +89,9 @@ input[type="text"]::placeholder {
 }
 
 .Plans {
-    border: white solid 2px ;
     border-radius: 10px;
     background-color: white;
-    height: 600px;
+    height: 500px;
     width: 90vw;
 
     
@@ -294,7 +291,7 @@ footer {
   width: 100%;
   padding: 10px;
   margin: 8px 0;
-  border: 1px solid #ccc;
+  border: 1px solid #F15223;
   border-radius: 6px;
   font-size: 16px;
 }
@@ -316,9 +313,9 @@ footer {
 }
 
 .workout-block {
-  border: 1px solid #ddd;
+  border: 1px solid #F15223;
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 15px;
-  background-color: #f9f9f9;
+  background-color: #F15223;
 }
