--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ input[type="text"]::placeholder {
     background-color: white;
     height: 500px;
     width: 90vw;
+  outline: 1px solid rgba(219, 219, 219, 0.662);
 
     
 }
@@ -200,6 +201,7 @@ input[type="text"]::placeholder {
 #Recent {
     font-family: sans-serif;
     font-size: 26px;
+    margin-left: 10px;
 }
 
 .dayy {
@@ -220,7 +222,7 @@ justify-content: space-around;
     display: flex;
     justify-content: end;
     align-items: end;
-    height: 90px;
+    height: 110px;
     
     
 } 
