--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ justify-content: space-around;
 footer {
     background-color: white;
     margin-top: 50px;
-    width: 100%;
+    width: 100vw;
     max-width: 100%;
     height: 120px;
     display: flex;
@@ -260,7 +260,7 @@ footer {
   bottom: -100%;
   left: 0;
   right: 0;
-  height: 90vh;
+  height: 80%;
   background-color: white;
   padding: 20px;
   border-top-left-radius: 20px;
