--- a/css/log-in.css
+++ b/css/log-in.css
@@ -1,4 +1,3 @@
-
     * {
       box-sizing: border-box;
     }
@@ -41,7 +40,8 @@
     }
 
     input[type="email"],
-    input[type="password"] {
+    input[type="password"],
+    input[type=text] {
       width: 100%;
       padding: 12px;
       font-size: 15px;
@@ -99,11 +99,4 @@
 
     .footer-text a:hover {
       text-decoration: underline;
-    }
-
-    /* Google Sign-In container spacing */
-    #google-signin {
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
     }
