--- a/css/Workout1.css
+++ b/css/Workout1.css
@@ -40,7 +40,7 @@
 .Container3 {
 	display: flex;
 	padding-left: 27px;
-	padding-top: 22px;
+	padding-top: 55px;
 }
 .Exercise1 {
 	color: white;
@@ -49,3 +49,4 @@
 	padding-top: 22px;
 	padding-left: 12px;
 }
+/* 
